--- a/environment_control/feeding/dockerfile
+++ b/environment_control/feeding/dockerfile
@@ -1,11 +1,15 @@
 # FROM python:3.13.0a4-slim-bookworm
 FROM python:3.8-slim-bullseye
+# FROM python:3
 # FROM python:3.11
 
 COPY . .
 # CMD ["python","./get-pip.py"]
 # RUN pip3 install torch
-RUN pip3 install cherrypy requests
-CMD ["python","./main_feeding.py"]
+RUN pip3 install cherrypy requests 
+RUN pip3 install python-etcd
+RUN pip3 install paho-mqtt==1.6.1
+
+CMD ["python3","./main_feeding.py"]
 
 # CMD ["bash"]
