--- a/environment_control/humidity/dockerfile
+++ b/environment_control/humidity/dockerfile
@@ -5,7 +5,9 @@ FROM python:3.8-slim-bullseye
 COPY . .
 # CMD ["python","./get-pip.py"]
 # RUN pip3 install torch
-RUN pip3 install cherrypy requests
+RUN pip3 install cherrypy requests 
+RUN pip3 install python-etcd
+RUN pip3 install paho-mqtt==1.6.1
 CMD ["python","./main_humidity.py"]
 
 # CMD ["bash"]
