--- a/environment_control/statistic_humidity/dockerfile
+++ b/environment_control/statistic_humidity/dockerfile
@@ -6,6 +6,8 @@ COPY . .
 # CMD ["python","./get-pip.py"]
 # RUN pip3 install torch
 RUN pip3 install cherrypy requests torch
+RUN pip3 install python-etcd
+RUN pip3 install paho-mqtt==1.6.1
 CMD ["python","./main_humidity_pred.py"]
 
 # CMD ["bash"]
